--- a/public/app/partials/Community/EditBlog.html
+++ b/public/app/partials/Community/EditBlog.html
@@ -40,7 +40,7 @@
     </button>
     <h1>Build Community</h1>
 
-    <p style="text-align:justify">Build community helps you replicate your existing, offline community online. You can use features like Connect, Circles, Groups, Events, Blogs and Discussions to interact with your community and grow it. These features are linked to WoiceIt, the streaming channel for promotion and propagation. This helps you spread the word better among your community about your activities.
+    <p style="text-align:justify">Build community helps you replicate your existing, offline community online. You can use features like Connect, Circles, Groups, Events, Blogs and Discussions to interact with your community and grow it. These features are linked to Stream It, the streaming channel for promotion and propagation. This helps you spread the word better among your community about your activities.
     </p>
 </div>
 <!-- Static navbar -->
