--- a/public/app/partials/Community/forums.html
+++ b/public/app/partials/Community/forums.html
@@ -76,7 +76,7 @@
             <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
             <h4>Discussion</h4>
             <p>
-                Open discussion forum
+                Open discussion 
             </p>
         </div>
     </div>
