--- a/public/app/partials/admin/Manage/stock_management.html
+++ b/public/app/partials/admin/Manage/stock_management.html
@@ -25,7 +25,7 @@
                     <div class="col-md-10 col-md-offset-1">
                         <div class="row" style="margin-top: 10px">
                             <div class="col-sm-3">
-                                <h5 style="color: #e51385; font-weight: 600">Products/Services</h5>
+                                <h5 style="color: #e51385; font-weight: 600">Stores/Business</h5>
                             </div>
                             <div class="col-sm-3">
                                 <select class="form-control"  id="product-line" id="selectproductLine"
