--- a/public/app/partials/admin/Manage/store_info.html
+++ b/public/app/partials/admin/Manage/store_info.html
@@ -11,7 +11,7 @@
     </button>
     <h1>Store Info</h1>
 
-    <p style="text-align:justify;font-size:16px;">Welcome to the manage store section. You can edit the information you have provided, anytime. You can add, delete products and services. Remember to save any changes you make in this section.
+    <p style="text-align:justify;font-size:16px;">Welcome to the manage store section. You can edit the information you have provided, anytime. You can add, delete store products and business services. Remember to save any changes you make in this section.
     </p>
 </div>
 <!--Description Ends-->
