--- a/public/app/partials/admin/blog.html
+++ b/public/app/partials/admin/blog.html
@@ -35,7 +35,7 @@
                                         Category: <a style="color: #e51385" href>{{blog.subcategory.category.category_name}}
                                     </a></span>
                                 </td>
-                                <td data-title="'Show in evezplace?'" class="text-center"
+                                <td data-title="'Show in marketplace?'" class="text-center"
                                     style="vertical-align: middle">
                                     <div class="checkbox checkbox-primary">
                                         <input type="checkbox"
@@ -122,7 +122,7 @@
         <div class="col-sm-12">
             <div class="row">
                 <div class="col-sm-6">
-                    <h5>Show in evezplace?</h5>
+                    <h5>Show in marketplace?</h5>
                 </div>
                 <div class="col-sm-6">
                     <div class="checkbox checkbox-primary">
@@ -141,7 +141,7 @@
         <div class="col-sm-12">
             <div class="row">
                 <div class="col-sm-6">
-                   <h5 tooltip="priority will keep the blog at the top in evezplace section">Set Priority (default 0)</h5>
+                   <h5 tooltip="priority will keep the blog at the top in marketplace section">Set Priority (default 0)</h5>
                 </div>
                 <div class="col-sm-6">
                     <input type="number" class="form-control"
@@ -154,7 +154,7 @@
 
             <div class="row">
                 <div class="col-sm-6">
-                    <h5 tooltip="priority will keep the blog at the top in evezplace section">Eveplace Section</h5>
+                    <h5 tooltip="priority will keep the blog at the top in marketplace section">Marketplace Section</h5>
                 </div>
                 <div class="col-sm-6">
                     <select class="form-control"
