--- a/public/app/partials/admin/events.html
+++ b/public/app/partials/admin/events.html
@@ -39,7 +39,7 @@
                                         <span style="font-size: 13px; font-weight: 300">{{event.owner.firstname}},
                                             {{event.owner.lastname}}</span></a>
                                 </td>
-                                <td data-title="'Show in evezplace?'" class="text-center"
+                                <td data-title="'Show in marketplace?'" class="text-center"
                                     style="vertical-align: middle">
                                     <div class="checkbox checkbox-primary">
                                         <input type="checkbox"
@@ -131,7 +131,7 @@
         <div class="col-sm-12">
             <div class="row">
                 <div class="col-sm-6">
-                    <h5>Show in evezplace?</h5>
+                    <h5>Show in marketplace?</h5>
                 </div>
                 <div class="col-sm-6">
                     <div class="checkbox checkbox-primary">
@@ -150,7 +150,7 @@
         <div class="col-sm-12">
             <div class="row">
                 <div class="col-sm-6">
-                    <h5 tooltip="priority will keep the blog at the top in evezplace section">Set Priority (default 0)</h5>
+                    <h5 tooltip="priority will keep the blog at the top in marketplace section">Set Priority (default 0)</h5>
                 </div>
                 <div class="col-sm-6">
                     <input type="number" class="form-control"
@@ -163,7 +163,7 @@
 
             <div class="row">
                 <div class="col-sm-6">
-                    <h5 tooltip="priority will keep the blog at the top in evezplace section">Marketplace Section</h5>
+                    <h5 tooltip="priority will keep the blog at the top in marketplace section">Marketplace Section</h5>
                 </div>
                 <div class="col-sm-6">
                     <select class="form-control"
