--- a/public/app/partials/description/evezown.html
+++ b/public/app/partials/description/evezown.html
@@ -3,7 +3,7 @@
     </button>
     <h1>MarketPlace - Beta - Under Construction</h1>
 
-    <p style="text-align:justify">Our products and services in marketplace is 5 key categories: Health, Wellness & Fitness, Food & Nutrition, Beauty & Fashion, Education, Care & Parenting, and Lifestyle. If you are in business, you can create your store and/or ads & campaigns. If you are a consumer you can buy products or business services in these five categories</p>
+    <p style="text-align:justify">Our stores and business in marketplace is 5 key categories: Health, Wellness & Fitness, Food & Nutrition, Beauty & Fashion, Education, Care & Parenting, and Lifestyle. If you are in business, you can create your store and/or ads & campaigns. If you are a consumer you can buy products or business services in these five categories</p>
 
 	<p style="text-align:justify">You can use our digital tools to stream to close knit community for promotions and branding. You can also stream it on select social sites. A good tool for spreading the word online.</p>
     <!-- <p>For more visit MarkePlace FAQs. <a href="#evezownfaq">Click here</a></p> -->
