--- a/public/app/partials/description/woice.html
+++ b/public/app/partials/description/woice.html
@@ -4,8 +4,8 @@
     </button>
     <h1>Woice</h1>
 
-    <p style="text-align:justify">This is the content-based community building and promotion platform. You can create your profile in-depth, connect with friends, colleagues, customers, partners, employees or other people you wish to connect with. You can promote yourself or your business digitally within your circles privately or publicly using features of WOICE section such as events, blogs, stream it, discussions and groups.
+    <p style="text-align:justify">This is the content-based community building and promotion platform. You can create your profile in-depth, connect with friends, colleagues, customers, partners, employees or other people you wish to connect with. You can promote yourself or your business digitally within your circles privately or publicly using features of Stream It section such as events, blogs, discussions and groups.
     </p>
-    <p>Echo your Woice. Be heard.</p>
-    <p>For more visit WOICE FAQs. <a href="#woicefaq"> Click here </a></p>
+    <p>Echo your Stream It. Be heard.</p>
+    <p>For more visit Stream It FAQs. <a href="#woicefaq"> Click here </a></p>
 </div>
