--- a/public/app/partials/evezplace/create_classified_success.html
+++ b/public/app/partials/evezplace/create_classified_success.html
@@ -64,14 +64,14 @@
             <div class="row">
                 <div class="col-md-12" style="padding: 20px 80px">
                     <p style="font-weight: 100; font-size: 1.2em">You can activate your Ads & Campaigns now or publish it to
-                        recco channel.
+                        Stream It channel.
                     </p>
                 </div>
             </div>
 
             <div class="row" style="margin-top: 10px">
                 <div class="col-md-6  col-md-offset-3">
-                    <p style="font-weight: 400; font-size: 1.2em">Publish Ads & Campaigns to recco?
+                    <p style="font-weight: 400; font-size: 1.2em">Publish Ads & Campaigns to Stream It?
                         <input type="checkbox"
                                ng-model="publishToRecco"
                                ng-checked="publishToRecco"/>
