--- a/public/app/partials/evezplace/create_store_step6.html
+++ b/public/app/partials/evezplace/create_store_step6.html
@@ -18,7 +18,7 @@
 <div class="create-store-section">
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h5 style="color: #e51385; font-weight: 700; font-size: 1.2em">Link your store front to Woice Profile</h5>
+            <h5 style="color: #e51385; font-weight: 700; font-size: 1.2em">Link your store front to Stream It.</h5>
         </div>
     </div>
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
