--- a/public/app/partials/evezplace/manage/Classifieds/classified_type.html
+++ b/public/app/partials/evezplace/manage/Classifieds/classified_type.html
@@ -53,7 +53,7 @@
                                        value="2"
                                        ng-model="addClassified.classified_for"
                                        required>
-                                Existing Event (Woice)
+                                Existing Event (Stream it)
                             </label>
                         </div>
                         <div class="col-md-offset-6 col-md-4">
