--- a/public/app/partials/evezplace/store_creation_success.html
+++ b/public/app/partials/evezplace/store_creation_success.html
@@ -34,7 +34,7 @@
     </div>
     <div class="row" style="margin-top: 10px; margin-bottom: 20px">
         <div class="col-md-6  col-md-offset-3">
-            <a href="#store/{{currentStrId}}/manage/product_catalogue" class="btn btn-primary btn-lg btn-block">Manage Products</a>
+            <a href="#store/{{currentStrId}}/manage/product_catalogue" class="btn btn-primary btn-lg btn-block">Manage Store</a>
         </div>
     </div>
 </div>
