--- a/public/app/partials/evezplace/store_info_jumbotron.html
+++ b/public/app/partials/evezplace/store_info_jumbotron.html
@@ -8,7 +8,7 @@
 
             <h1 style="text-transform: uppercase; font-weight: 900">MarketPlace</h1>
 
-            <p>Marketplace for showcasing products and business services in 5 key categories</p>
+            <p>Marketplace for showcasing stores and business services in 5 key categories</p>
             <ul style="margin-top: 20px; border-radius: 10px ; display:block">
                 <li>Health, Wellness Fitness</li>
                 <li>Food & Nutrition</li>
