--- a/public/app/partials/home/home.html
+++ b/public/app/partials/home/home.html
@@ -15,14 +15,14 @@
 
                 <div class="col-md-4" >
                 <a href="#profile/{{userId}}" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF;" id="step1" data-target="#step1" data-toggle="tab" data-slide-to="0">Mysite</h1></a>
-                <p style="text-align: justify;font-size:15px;">
+                <p style="text-align: justify;word-break: break-all;font-size:15px;">
                     <img src="img/mysite.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
-                    <a href="#home" style="text-decoration:none;">Evezown</a> is a unique commerce and community platform for women. If you are an entrepreneur, Business professional or an organisation/association, Evezown offers a unique web presence combined with interaction and transaction features and a host of Ecom and digital promotional tools.</p>
+                    <a href="#home" style="text-decoration:none;">Evezown</a> is a unique commerce and community platform. If you are an entrepreneur, Business professional or an organisation/association, Evezown offers a unique web presence combined with interaction and transaction features and a host of Ecom and digital promotional tools.</p>
                 </div>
 
                 <div class="col-md-4" >
                 <a href="#evezplace" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step2" data-target="#step2" data-toggle="tab" data-slide-to="1">MarketPlace</h1></a>
-                <p style="text-align: justify;font-size:15px;">
+                <p style="text-align: justify;word-break: break-all;font-size:15px;">
                     <img src="img/market_place.jpg" class="description-img" width="150" height="80" style="border: 2px solid #FFFFFF;"/>
                     Shopping is an art for discerning! If you have an eye for it, you will love MarketPlace!
                         This is a place for all things exclusive,  unique, you can always find something that  reflects your personal touch and taste.
@@ -31,9 +31,9 @@
 
                 <div class="col-md-4" >
                 <a href="#wopportunity" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step3" data-target="#step3" data-toggle="tab" data-slide-to="2">Jobs</h1></a>
-                <p style="text-align: justify;font-size:15px;">
+                <p style="text-align: justify;word-break: break-all;font-size:15px;">
                     <img src="img/jobs.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
-                    This is resourcing platform. If you are in business, you can use it for hiring talent. As a working professional you can use this platform to find an opportunity of your choice. Customized categorization helps you identify suitable opportunity.</p>
+                    This is resourcing platform. If you are in business, you can use it for hiring talent. As a working professional you can use this platform to find an job opportunity of your choice. Customized categorization helps you identify suitable job opportunity.</p>
                 </div>
 
                 <div class="col-md-12">
@@ -51,7 +51,7 @@
 
             <div class="col-md-12" ng-if="loggedIn">
                 <h1>Evezown</h1>
-                <p style="text-align:justify;">Good to see you, Go ahead create your own place, create your site, build your closed private community, use our single window to create stores, Ads & Campaigns, promote your stores and business through host of promotional features we offer.</p>
+                <p style="text-align:justify;word-break: break-all;">Good to see you, Go ahead create your own place, create your site, build your closed private community, use our single window to create stores, Ads & Campaigns, promote your stores and business through host of promotional features we offer.</p>
 
                 <div class="request-invite">
                     <div class="col-md-8 zero-left-padding">
