--- a/public/app/partials/profile/details/partnering.html
+++ b/public/app/partials/profile/details/partnering.html
@@ -208,7 +208,7 @@
                                        ng-false-value="0"
                                        ng-checked="partnering.as_woice_user == 1"/>
                                 <label for="thoughwoice">
-                                    As a normal WOICE user only
+                                    As a normal Stream It user only
                                 </label>
                             </li>
                         </ul>
