--- a/public/app/partials/evezplace/classifieds.html
+++ b/public/app/partials/evezplace/classifieds.html
@@ -353,7 +353,7 @@
         </div>
         <div class="panel panel-primary panel-custom">
             <div class="panel-heading panel-heading-custom">
-                <h3 class="panel-title">Related Forums</h3>
+                <h3 class="panel-title">Related discussion</h3>
             </div>
             <div class="panel-body panel-body-custom">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium ad aliquam cupiditate dicta
