--- a/public/app/partials/evezplace/create_classifieds_step1.html
+++ b/public/app/partials/evezplace/create_classifieds_step1.html
@@ -43,7 +43,7 @@
                                value="2"
                                ng-model="addClassified.classified_for"
                                required>
-                        Existing Event (Woice)
+                        Existing Event (Stream It)
                     </label>
                 </div>
                 <div class="col-md-offset-6 col-md-4">
