--- a/public/app/partials/evezplace/whatdoiget.html
+++ b/public/app/partials/evezplace/whatdoiget.html
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="row" style="padding: 40px 80px">
-        <h4 style="line-height: 1.5">Open a products store or services store under any of 5 Categories and 250 plus subcategories. You can promote it through Steam It, Connect related blogs, Discussion and Events. Basic Store is free. Paid Standard and Customised stores provide enhanced features helping you to position and market your services.</h4>
+        <h4 style="line-height: 1.5">Open a Store or Business services  under any of 5 Categories and 250 plus subcategories. You can promote it through Steam It, Connect related blogs, Discussion and Events. Basic Store is free. Paid Standard and Customised stores provide enhanced features helping you to position and market your services.</h4>
     </div>
     <div ng-include src='"partials/evezplace/get_started.html"' ng-controller="StoreInfoController"></div>
 </div>
