--- a/public/app/partials/profile/details/change_password.html
+++ b/public/app/partials/profile/details/change_password.html
@@ -43,7 +43,7 @@
                              class="img-responsive thumbnail" />
                         <div class="overlay fileUpload" ng-if="userId == loggedInUserId">
                             <ul class="list-unstyled text-center">
-                                <li><a href>Update Evezsite Image</a></li>
+                                <li><a href>Update Mysite Image</a></li>
                                 <input type="file" class="upload" name="image" nv-file-select uploader="uploader"/>
                                 <div ng-if="uploader.queue.length > 0">
                                     <!-- Image upload queue section start -->
@@ -80,7 +80,7 @@
                             <a href="#" ng-controller="community">
                                 <div class="col-md-2 col-xs-2 well text-center" id="user-profile">
                                     <h3>{{friendList.length}}</h3>
-                                    <h4>Eves</h4>
+                                    <h4>Friends</h4>
                                 </div>
                             </a>
 
@@ -98,7 +98,7 @@
                             </div>
                             <div class="col-md-2 col-xs-2 well text-center" id="user-profile" ng-controller="albums">
                                 <h3>{{myAlbums.length}}</h3>
-                                <h4>Albums</h4>
+                                <h4>Gallery</h4>
                             </div>
                             <div class="col-md-2 col-xs-2 well text-center" id="user-more">
                                 <h3><i class="fa fa-circle"></i>
@@ -145,7 +145,7 @@
                     <p>My Reference info </p>
                 </a>
                 <a href="#profile/{{userId}}/participation" class="btn btn-default ">
-                    <p>My Participation in </br>EvezPlace </p>
+                    <p>My Participation in </br>MarketPlace </p>
                 </a>
                 <a href="#profile/{{userId}}/other" class="btn btn-default">
                     <p>Other EvezOwn services </p>
