--- a/public/app/partials/profile/editblog.html
+++ b/public/app/partials/profile/editblog.html
@@ -190,7 +190,7 @@
     <text-angular ng-model="htmlVariable"></text-angular>
     <div class="col-md-2 pull-right" style="padding-top: 10px; padding-bottom: 10px;">
         <button class="btn btn-primary btn-block" id="btn-publish"
-                ng-click="EditBlogById(true)">Woice It</button>
+                ng-click="EditBlogById(true)">Stream It</button>
     </div>
     <div class="col-md-2 pull-right" style="padding-top: 10px; padding-bottom: 10px;">
         <button class="btn btn-primary btn-block" id="btn-Edit"
