--- a/public/app/partials/staticpages/aboutus.html
+++ b/public/app/partials/staticpages/aboutus.html
@@ -2,12 +2,12 @@
 <div class="jumbotron alert alert-dismissible fade in inner-jumbotron shadow " id="no-border-round" role="alert">
     <h1>About Us</h1>
     <div class="staticpages">
-        <p>EvezOwn is a woman-cetric products and services platform. You can showcase, brand, position and sell your product or service. Categories and topics chosen are specific to interests and needs of women.</p>
+        <p>EvezOwn is a unique commerce and community platform for 5 products and services categories of Health, Wellness & Fitness, Beauty & Fashion, Food & Nutrition, Education, Care & Parenting and Lifestyle. If you are an entrepreneur, Business professional or an organisation/association in these categories, Evezown offers a unique web presence combined with interaction and transaction features and a host of Ecom and digital promotional tools.</p>
 
-        <p>Women in general are at the core of economic activity. It is embedded in their daily routine. They are buying, selling, recommending, searching and discovering various products and services to meet their needs and needs of their family and friends. EvezOwn provides the platform for entrepreneurs and consumers to pursue this activity more efficiently and effectively.</p>
+        <p>Our five categories are at the core of economic activity. It is embedded in every consumer’s daily routine. They are buying, selling, recommending, searching and discovering various products and services to meet their needs and needs of their family and friends in these categories. EvezOwn provides the platform for entrepreneurs and consumers to pursue this activity more efficiently and effectively.  It allows them to present their identity, professional or personal, build their community and promote through a host of features such as blogs, discussion, Ads & Campaigns, events, and Stream It.</p>
 
-        <p>You can replicate your offline world here - build your circle of friends, share your finds and recommendations, showcase your talent, promote your products or services, and participate in discussions and forums. Being a closed community platform, it provides safe environs for open and useful interactions.</p>
+        <p>The accent in EvezOwn is on categories and sub categories most of which are personalized, niche, reference oriented, high involvement, concept oriented and high quality products and services that are not so easily available or known widely.
+		Evezown.com is the first initiative launched by Web Insights Private Limited, an Internet Innovations Company.</p>
 
-        <p>WebInsights Private Limited is the promoter of EvezOwn.</p>
     </div> 
 </div>
