--- a/public/app/partials/woice/home.html
+++ b/public/app/partials/woice/home.html
@@ -1,12 +1,12 @@
 <!-- Main component for a primary marketing message or call to action -->
 <div class="jumbotron alert alert-dismissible inner-jumbotron shadow " ng-show="caption" id="no-border-round" role="alert" ng-controller="WoiceController">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
-    <h1>Woice</h1>
+    <h1>Stream It</h1>
 
     <p>Woman can create their identity. Connect with friends, colleagues, customers, partners, employees or just about
         any woman. You can also promote and accelerate your business digitally within your private circles as well as
-        publicly on the website. Create independent circles; promote your reccos, preferences as well as your own
-        stores, services or ideas. You can create your events, groups; participate in forums and many more. Make your
+        publicly on the website. Create independent circles; promote your stream it, preferences as well as your own
+        stores, services or ideas. You can create your events, groups; participate in discussion and many more. Make your
         voice heard.
     </p>
 </div>
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav" >
                 <li ng-class="{ active: isActive('/trending')}"><a  href="#trending" class="active">Trending</a></li>
                 <li ng-class="{ active: isActive('/community')}" ><a href="#community">Build Community</a></li>
-                <li ng-class="{ active: isActive('/wopportunity')}"><a  href="#wopportunity">Recco it</a></li>
+                <li ng-class="{ active: isActive('/wopportunity')}"><a  href="#wopportunity">Stream It</a></li>
                 <li ng-class="{ active: isActive('/explore')}">
                     <!-- Template which needs to be shown on click -->
                     <script type="text/ng-template" id="explore">
