--- a/public/app/views/classifieds/create/layout1_partial.html
+++ b/public/app/views/classifieds/create/layout1_partial.html
@@ -103,7 +103,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <h5 style="color: #e51385; font-weight: 700; font-size: 1.8em; margin-bottom: 20px">Publish
-                        Classified</h5>
+                        Ads & Campaigns</h5>
                 </div>
             </div>
             <div class="row">
@@ -117,15 +117,15 @@
 
             <div class="row">
                 <div class="col-md-12" style="padding: 20px 80px">
-                    <p style="font-weight: 100; font-size: 1.2em">You can activate your classified now or publish it to
-                        recco channel.
+                    <p style="font-weight: 100; font-size: 1.2em">You can activate your ads & campaigns now or publish it to
+                        stream it channel.
                     </p>
                 </div>
             </div>
 
             <div class="row" style="margin-top: 10px">
                 <div class="col-md-6  col-md-offset-3">
-                    <p style="font-weight: 400; font-size: 1.2em">Publish classified to recco?
+                    <p style="font-weight: 400; font-size: 1.2em">Publish Ads & Campaigns to Stream It?
                         <input type="checkbox"
                                ng-model="publishToRecco"
                                ng-checked="publishToRecco"/>
@@ -135,7 +135,7 @@
 
             <div class="row" style="margin-top: 10px">
                 <div class="col-md-6  col-md-offset-3">
-                    <p style="font-weight: 400; font-size: 1.2em">Activate classified now?
+                    <p style="font-weight: 400; font-size: 1.2em">Activate Ads & Campaigns now?
                         <input type="checkbox"
                                ng-model="activateClassified"
                                ng-checked="activateClassified"/>
