--- a/public/app/partials/Recco/recco.html
+++ b/public/app/partials/Recco/recco.html
@@ -6,7 +6,7 @@
     <h1>Reco</h1>
 
     <p>People can create their identity. Connect with friends, colleagues, customers, partners, employees or just about
-        any woman. You can also promote and accelerate your business digitally within your private circles as well as
+        any people. You can also promote and accelerate your business digitally within your private circles as well as
         publicly on the website. Create independent circles; promote your stream it, preferences as well as your own
         stores, business services or ideas. You can create your events, groups; participate in discussion and many more. Make your
         voice heard.</p>
