--- a/public/app/partials/admin/editUserInfo.html
+++ b/public/app/partials/admin/editUserInfo.html
@@ -138,7 +138,7 @@
 							                            <option value="govt">Govt official</option>
 							                            <option value="service">Service Professional</option>
 							                            <option value="entrepreneur">Entrepreneur</option>
-							                            <option value="business">Business woman</option>
+							                            <option value="business">Business people</option>
 							                            <option value="business">Student</option>
 							                            <option value="other">other</option>
 							                        </select>
