--- a/public/app/partials/invite/requestinvite.html
+++ b/public/app/partials/invite/requestinvite.html
@@ -67,7 +67,7 @@
                             <option value="brand">Brand Evangelist</option>
                             <option value="service">Service Professional</option>
                             <option value="entrepreneur">Entrepreneur</option>
-                            <option value="business">Business Woman</option>
+                            <option value="business">Business People</option>
                             <option value="organization">Organisation / Association</option>
                             <option value="industry">Industry Body</option>
                             <option value="other">Other</option>
