--- a/public/app/partials/woice/home.html
+++ b/public/app/partials/woice/home.html
@@ -3,8 +3,8 @@
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button>
     <h1>Stream It</h1>
 
-    <p>Woman can create their identity. Connect with friends, colleagues, customers, partners, employees or just about
-        any woman. You can also promote and accelerate your business digitally within your private circles as well as
+    <p>People can create their identity. Connect with friends, colleagues, customers, partners, employees or just about
+        any people. You can also promote and accelerate your business digitally within your private circles as well as
         publicly on the website. Create independent circles; promote your stream it, preferences as well as your own
         stores, services or ideas. You can create your events, groups; participate in discussion and many more. Make your
         voice heard.
