--- a/public/app/partials/profile/details/home.html
+++ b/public/app/partials/profile/details/home.html
@@ -284,7 +284,7 @@
                             <option value="govt">Govt official</option>
                             <option value="service">Service Professional</option>
                             <option value="entrepreneur">Entrepreneur</option>
-                            <option value="business">Business woman</option>
+                            <option value="business">Business People</option>
                             <option value="business">Student</option>
                             <option value="other">other</option>
                         </select>
