English change for replacing the eves to friends
English change for replacing the eves to friends

--- a/public/app/partials/Trending/trending.html
+++ b/public/app/partials/Trending/trending.html
@@ -73,8 +73,8 @@
             
             <li style="text-align: right">
                 <select name="selectEves" id="selectEves" class="form-control" ng-model="selectEves">
-                    <option value="all eves">all eves</option>
-                    <option value="my eves">my eves</option>
+                    <option value="all eves">All Members</option>
+                    <option value="my eves">My Friends</option>
                 </select>
             </li>
         </ul>
