--- a/public/app/partials/evezplace/manage/Classifieds/classified_promotion.html
+++ b/public/app/partials/evezplace/manage/Classifieds/classified_promotion.html
@@ -49,7 +49,7 @@
                                    ng-model="addClassified.step3.is_my_eves"
                                    ng-checked="addClassified.step3.is_my_eves"
                                    style="width: 16px; height: 16px"> <label
-                                for="isMyEves">My Eves</label>
+                                for="isMyEves">My Friends</label>
                         </div>
                     </div>
                 </div>
