--- a/public/app/partials/evezplace/article_news_interviews_partial.html
+++ b/public/app/partials/evezplace/article_news_interviews_partial.html
@@ -58,7 +58,7 @@
     <!--News-->
     <div class="panel panel-primary panel-custom">
         <div class="panel-heading panel-heading-custom">
-            <h3 class="panel-title">Forums</h3>
+            <h3 class="panel-title">Discussions</h3>
         </div>
         <div class="panel-body panel-body-custom">
             <div class="interviews-section">
