--- a/public/app/partials/admin/Manage/commerce_engine.html
+++ b/public/app/partials/admin/Manage/commerce_engine.html
@@ -70,7 +70,7 @@
                 <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                     <div class="form-group">
                         <div class="col-md-offset-6 col-sm-5">
-                            <input type="text" placeholder="Pincode" class="form-control"
+                            <input type="number" placeholder="Please enter 6 digits Pincode" class="form-control"
                                    id="billingPincode" name="billingPincode"
                                    ng-model="storeCommerce.billingPincode">
                         </div>
@@ -132,7 +132,7 @@
                                 Information</h5>
                         </div>
                         <div class="col-md-5">
-                            <input type="text" placeholder="Contact Number" class="form-control"
+                            <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control"
                                    id="contactNumber" name="contactNumber"
                                    ng-model="storeCommerce.contactNumber"/>
                         </div>
