--- a/public/app/partials/evezplace/create_classifieds_step2.html
+++ b/public/app/partials/evezplace/create_classifieds_step2.html
@@ -208,7 +208,7 @@
                         <label for="dealDescription">Contact Details</label>
                     </div>
                     <div class="col-md-4">
-                        <input type="number" placeholder="Phone Number" class="form-control" id="phoneNum" name="phoneNum"
+                        <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control" id="phoneNum" name="phoneNum"
                                ng-model="addClassified.contactDetails.phoneNum" required>
                     </div>
                 </div>
@@ -261,7 +261,7 @@
             <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                 <div class="form-group">
                     <div class="col-md-offset-6 col-md-4">
-                        <input type="text" placeholder="Pincode" class="form-control" id="cityState" name="pincode"
+                        <input type="number" placeholder="Please enter 6 digits Pincode" class="form-control" id="cityState" name="pincode"
                                ng-model="addClassified.storeLocation.pincode" required/>
                     </div>
                 </div>
