--- a/public/app/partials/evezplace/manage/store/store_info.html
+++ b/public/app/partials/evezplace/manage/store/store_info.html
@@ -139,7 +139,7 @@
                         <label for="pincode">Pincode</label>
                     </div>
                     <div class="col-sm-5">
-                        <input type="text" id="pincode" class="form-control" name="pincode" ng-model="formData.pincode">
+                        <input type="number" placeholder="Please enter 6 digits Pincode" id="pincode" class="form-control" name="pincode" ng-model="formData.pincode">
                     </div>
                 </div>
             </div>
