--- a/public/app/partials/home/home.html
+++ b/public/app/partials/home/home.html
@@ -96,9 +96,9 @@
                 <li id="step3" data-target="#myCarousel" data-slide-to="2">
                     <a href="#wopportunity" data-target="#myCarousel" data-toggle="tab" class="btn btn-link"
                        role="button">
-                        <h4>W'opportunity</h4>
+                        <h4>Jobs</h4>
 
-                        <p>careers and listing</p>
+                        <p>careers and Ads & Campaigns</p>
                     </a>
                 </li>
 
