--- a/public/app/partials/admin/Manage/store_crm.html
+++ b/public/app/partials/admin/Manage/store_crm.html
@@ -39,7 +39,7 @@
                 <label for="storePhone1">Phone Numbers</label>
             </div>
             <div class="col-md-4">
-                <input type="text" placeholder="Phone Number #1" class="form-control" id="storePhone1" name="storePhone1"
+                <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control" id="storePhone1" name="storePhone1"
                        ng-model="formData.storePhone1">
             </div>
         </div>
@@ -48,7 +48,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-4 col-md-offset-6">
-                <input type="text" placeholder="Phone Number #2" class="form-control" id="storePhone2" name="storePhone2"
+                <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control" id="storePhone2" name="storePhone2"
                        ng-model="formData.storePhone2">
             </div>
         </div>
@@ -57,7 +57,7 @@
     <div class="row" style="margin-top: 10px; margin-bottom: 10px">
         <div class="form-group">
             <div class="col-md-4 col-md-offset-6">
-                <input type="text" placeholder="Phone Number #3" class="form-control" id="storePhone3" name="storePhone3"
+                <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control" id="storePhone3" name="storePhone3"
                        ng-model="formData.storePhone3">
             </div>
         </div>
