--- a/public/app/partials/admin/Manage/store_info.html
+++ b/public/app/partials/admin/Manage/store_info.html
@@ -137,7 +137,7 @@
                         <label for="pincode">Pincode</label>
                     </div>
                     <div class="col-sm-5">
-                        <input type="text" id="pincode" class="form-control" name="pincode" ng-model="formData.pincode">
+                        <input type="number" placeholder="please enter 6 digits Pincode" id="pincode" class="form-control" name="pincode" ng-model="formData.pincode">
                     </div>
                 </div>
             </div>
