--- a/public/app/partials/admin/editUserInfo.html
+++ b/public/app/partials/admin/editUserInfo.html
@@ -37,8 +37,8 @@
 							            <div class="row">
 							                <div class="col-xs-12 col-sm-8 col-md-6">
 							                    <div class="form-group">
-							                        <input type="text" name="phonenumber" id="phonenumber" class="form-control input-lg"
-							                               placeholder="Phone Number" tabindex="3" ng-model="profile.phone">
+							                        <input type="number" name="phonenumber" id="phonenumber" class="form-control input-lg"
+							                               placeholder="Please enter 10 digits Phone Number" tabindex="3" ng-model="profile.phone">
 							                    </div>
 							                </div>
 							                <div class="col-xs-12 col-sm-8 col-md-6">
@@ -74,8 +74,8 @@
 							                </div>
 							                <div class="col-xs-12 col-sm-8 col-md-6">
 							                    <div class="form-group">
-							                        <input type="text" name="zip" id="zip" class="form-control input-lg"
-							                               placeholder="Pincode" tabindex="9" ng-model="profile.zip">
+							                        <input type="number" name="zip" id="zip" class="form-control input-lg"
+							                               placeholder="Please enter 6 digits Pincode" tabindex="9" ng-model="profile.zip">
 							                    </div>
 							                </div>
 							            </div>
