--- a/public/app/partials/evezplace/create_classifieds_step1.html
+++ b/public/app/partials/evezplace/create_classifieds_step1.html
@@ -2,7 +2,7 @@
     <button type="button" class="close " data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
     
-        <h1 style="color: #e51385">Create Ads & Campaigns/listing home page</h1>
+        <h1 style="color: #e51385">Ads & Campaigns</h1>
 
         <p>Welcome to Ads & Campaigns creation page. If you are a store owner, you can create an ad for your store - be it deals, new product or service. If you are a consumer, you can create your favourite product or service as a poster for promotion. This is a structured way of creating and promoting and building a campaign...you can stream to your evezown community or share it with your friends or cusomers on social networks. All In 3 simple steps! Start here by choosing the type of Ads & Campaigns and the category/sub-category you would like it to be listed under.</p>
 </div>
