--- a/public/app/partials/evezplace/create_store_step1.html
+++ b/public/app/partials/evezplace/create_store_step1.html
@@ -127,7 +127,7 @@
                 <label for="pincode">Pincode</label>
             </div>
             <div class="col-md-4">
-                <input type="text" id="pincode" onkeypress="return isNumberKey(event)" class="form-control" name="pincode" ng-model="formData.pincode">
+                <input type="number" id="pincode" placeholder="Please enter 6 digits Pincode" class="form-control" name="pincode" ng-model="formData.pincode">
             </div>
         </div>
     </div>
