--- a/public/app/partials/evezplace/manage/store/commerce_engine.html
+++ b/public/app/partials/evezplace/manage/store/commerce_engine.html
@@ -76,7 +76,7 @@
                 <div class="row" style="margin-top: 10px; margin-bottom: 10px">
                     <div class="form-group">
                         <div class="col-md-offset-6 col-sm-5">
-                            <input type="text" placeholder="Pincode" class="form-control"
+                            <input type="number" placeholder="Please enter 6 digits Pincode" class="form-control"
                                    id="billingPincode" name="billingPincode"
                                    ng-model="storeCommerce.billingPincode">
                         </div>
