--- a/public/app/partials/profile/details/home.html
+++ b/public/app/partials/profile/details/home.html
@@ -184,7 +184,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-6">
                     <div class="form-group">
-                        <input type="number" name="phonenumber" id="phonenumber" class="form-control input-lg" placeholder="Phone Number" tabindex="3" ng-model="profile.phone" onkeypress="return isNumberKey(event)">
+                        <input type="number" name="phonenumber" id="phonenumber" class="form-control input-lg" placeholder="Please enter 10 digits Phone Number" tabindex="3" ng-model="profile.phone">
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-6">
@@ -220,8 +220,8 @@
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-6">
                     <div class="form-group">
-                        <input type="text" name="zip" id="zip" class="form-control input-lg"
-                               placeholder="Pincode" tabindex="9" ng-model="profile.zip">
+                        <input type="number" name="zip" id="zip" class="form-control input-lg"
+                               placeholder="Please enter 6 digits Pincode" tabindex="9" ng-model="profile.zip">
                     </div>
                 </div>
             </div>
