--- a/public/app/partials/profile/details/reference.html
+++ b/public/app/partials/profile/details/reference.html
@@ -171,7 +171,7 @@
                     </div>
                     <div class="form-group">
                         <input type="number" name="phone" id="phone1" class="form-control input-lg"
-                               placeholder="Phone number" tabindex="4" ng-model="referenceProfile.reference_phone1" onkeypress="return isNumberKey(event)">
+                               placeholder="Please enter 10 digits Phone Number" tabindex="4" ng-model="referenceProfile.reference_phone1" onkeypress="return isNumberKey(event)">
                     </div>
                     <div class="row">
                         <!--<div class="col-xs-12 col-md-4 col-md-offset-8" style="margin-top: 10px">-->
@@ -197,7 +197,7 @@
                     </div>
                     <div class="form-group">
                         <input type="number" name="phone" id="phone2" class="form-control input-lg"
-                               placeholder="Phone number" tabindex="4" ng-model="referenceProfile.reference_phone2" onkeypress="return isNumberKey(event)">
+                               placeholder="Please enter 10 digits Phone Number" tabindex="4" ng-model="referenceProfile.reference_phone2">
                     </div>
                     <div class="row">
                         <!--<div class="col-xs-12 col-md-4 col-md-offset-8" style="margin-top: 10px">-->
@@ -223,7 +223,7 @@
                     </div>
                     <div class="form-group">
                         <input type="number" name="phone" id="phone3" class="form-control input-lg"
-                               placeholder="Phone number" tabindex="4" ng-model="referenceProfile.reference_phone3" onkeypress="return isNumberKey(event)">
+                               placeholder="Please enter 10 digits Phone Number" tabindex="4" ng-model="referenceProfile.reference_phone3" >
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-md-4 col-md-offset-8" style="margin-top: 10px">
