--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -53,7 +53,7 @@
         and groups.
     </p>
 
-    <p style="text-align:justify">For more visit <a href style="text-decoration:none;">Mysite FAQs</a>.</p>
+    <!-- <p style="text-align:justify">For more visit <a href style="text-decoration:none;">Mysite FAQs</a>.</p> -->
 </div>
 <div class="col-md-12">
     <div class="container col-md-12" ng-controller="profileCtrl">
