Image upload updated
Added validations for select, default select area extended, spinner
added across

--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -381,7 +381,6 @@
     <div class="ngdialog-buttons popuptemplate">
         <b>Crop Left Cover Image</b>
         <br/>
-
         <form>
             <div class="fileUpload btn btn-primary btn-block">
                 <span><i class="fa fa-camera"></i> Select Left Cover</span>
@@ -401,7 +400,11 @@
                      selected='slideImage.selected(cords)'>
             </ng-crop>
             <br/>
-            <a ng-click="LeftCoverImage()" class="btn btn-primary pull-right">Upload</a>
+
+            <a ng-click="LeftCoverImage()" class="btn btn-primary pull-right" style="width:120px;">Upload 
+            <span style="position:absolute;margin-top:10px;margin-left:18px;" us-spinner="{radius:6, width:2, length: 2,color: '#FFFFFF'}" spinner-key="spinner-1" spinner-start-active="false"></span>
+            </a>
+            <p style="color:#0992F0">Please crop the image before upload</p>
             <br/>
         </form>
     </div>
@@ -432,7 +435,10 @@
                      selected='slideImage.selected(cords)'>
             </ng-crop>
             <br/>
-            <a ng-click="BottomCoverImage()" class="btn btn-primary pull-right">Upload</a>
+            <a ng-click="BottomCoverImage()" class="btn btn-primary pull-right" style="width:120px;">Upload
+            <span style="position:absolute;margin-top:10px;margin-left:18px;" us-spinner="{radius:6, width:2, length: 2,color: '#FFFFFF'}" spinner-key="spinner-1" spinner-start-active="false"></span>
+            </a>
+            <p style="color:#0992F0">Please crop the image before upload</p>
             <br/>
         </form>
     </div>
@@ -463,7 +469,10 @@
                      selected='slideImage.selected(cords)'>
             </ng-crop>
             <br/>
-            <a ng-click="RightCoverImage()" class="btn btn-primary pull-right">Upload</a>
+            <a ng-click="RightCoverImage()" class="btn btn-primary pull-right" style="width:120px;">Upload
+            <span style="position:absolute;margin-top:10px;margin-left:18px;" us-spinner="{radius:6, width:2, length: 2,color: '#FFFFFF'}" spinner-key="spinner-1" spinner-start-active="false"></span>
+            </a>
+            <p style="color:#0992F0">Please crop the image before upload</p>
             <br/>
         </form>
     </div>
@@ -494,7 +503,10 @@
                      selected='slideImage.selected(cords)'>
             </ng-crop>
             <br/>
-            <a ng-click="UpdateEvezsiteImage()" class="btn btn-primary pull-right">Upload</a>
+            <a ng-click="UpdateEvezsiteImage()" class="btn btn-primary pull-right" style="width:120px;">Upload
+            <span style="position:absolute;margin-top:10px;margin-left:18px;" us-spinner="{radius:6, width:2, length: 2,color: '#FFFFFF'}" spinner-key="spinner-1" spinner-start-active="false"></span>
+            </a>
+            <p style="color:#0992F0">Please crop the image before upload</p>
             <br/>
         </form>
     </div>
