--- a/public/app/partials/search/advancedSearch.html
+++ b/public/app/partials/search/advancedSearch.html
@@ -347,7 +347,7 @@
                 <!-- Search results ends -->
             </div>
             <!-- Right advertising section -->
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="row" style="margin-left: 10px">
                     <h4 class="ribbon hot">What's Hot</h4>
                 </div>
@@ -380,7 +380,7 @@
                         </article>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Right advertising section end -->
         </div>
     </div>
